--- a/index.html
+++ b/index.html
@@ -304,6 +304,8 @@
 
 <div id="filterHint" class="filterHint"></div>
 
+    </aside>
+
     <main class="main">
       <div class="cards">
         <div class="card">
